--- a/ldjam50/Assets/StreamingAssets/GameFieldSettings.json
+++ b/ldjam50/Assets/StreamingAssets/GameFieldSettings.json
@@ -11,6 +11,43 @@
     "DisableShop": false,
     "TroopDefaults": [
       {
+        "Type": "Palace Guard",
+        "Names": [
+          "Palace Guard"
+        ],
+        "MaxSpeed": 0.1,
+        "Health": 150,
+        "MaxHealth": 200,
+        "Strength": 30,
+        "Repulsion": 0.001,
+        "Range": 0.055,
+        "Color": {
+          "Red": 0.251424,
+          "Green": 0.3966849,
+          "Blue": 0.7075472,
+          "Alpha": 0.95
+        },
+        "ImageName": "SGuard",
+        "MarchSounds": [
+          "Fanfare_1",
+          "March_1",
+          "March_2",
+          "March_3",
+          "March_4",
+          "March_5",
+          "Yes_Sir",
+          "Yes_Sir_2"
+        ],
+        "UnitCost": 200,
+        "Bases": [
+          {
+            "Pos_x": 0.495,
+            "Pos_y": 0.512,
+            "Radius": 0.07
+          }
+        ]
+      },
+      {
         "Type": "Police",
         "Names": [
           "1st Police Corps",
