Jason Game Mode Instant Kill, Rebell Collect

--- a/ldjam50/Assets/StreamingAssets/GameFieldSettings.json
+++ b/ldjam50/Assets/StreamingAssets/GameFieldSettings.json
@@ -285,15 +285,15 @@
   {
     "Name": "Rebell Collect",
     "FirstTick": 3,
-    "TickInterval": 5,
-    "TickIntervalFactor": 0.97,
+    "TickInterval": 8,
+    "TickIntervalFactor": 0.99,
     "MoneyInterval": 1000,
     "MoneyFirstTick": 1000,
     "MoneyGainPerInterval": 0,
     "PalaceDefault":{
     "Healing": 50,
-    "Health": 100000,
-    "MaxHealth": 100000
+    "Health": 1,
+    "MaxHealth": 1
 	},
     "DisableShop": true,
     "TroopDefaults": [
@@ -308,9 +308,9 @@
           "Blue": 0.7075472,
           "Alpha": 0.95
         },
-        "MaxSpeed": 0.4,
-        "Health": 200,
-        "MaxHealth": 200,
+        "MaxSpeed": 0.6,
+        "Health": 1000000000,
+        "MaxHealth": 1000000000,
         "Strength": 0,
         "Repulsion": -0.002,
         "Range": 0.05,
@@ -345,7 +345,7 @@
         "MaxSpeed": 0.01,
         "Health": 100,
         "MaxHealth": 100,
-        "Strength": 0,
+        "Strength": 0.0001,
         "Repulsion": 0.00005,
         "Range": 0.05,
         "ImageName": "Riots",
@@ -369,14 +369,15 @@
     "Name": "Instant Kill",
     "FirstTick": 3,
     "TickInterval": 2,
-    "TickIntervalFactor": 0.97,
+    "TickIntervalFactor": 0.95,
     "MoneyInterval": 1000,
     "MoneyFirstTick": 1000,
     "MoneyGainPerInterval": 0,
     "PalaceDefault":{
     "Healing": 50,
-    "Health": 100000,
-    "MaxHealth": 100000
+    "Health": 1,
+    "MaxHealth": 1,
+	"SafeZoneRadius": 0.2
 	},
     "DisableShop": true,
     "TroopDefaults": [
@@ -391,11 +392,11 @@
           "Blue": 0.7075472,
           "Alpha": 0.95
         },
-        "MaxSpeed": 0.6,
+        "MaxSpeed": 0.4,
         "Health": 1000000,
         "MaxHealth": 1000000,
         "Strength": 100,
-        "Repulsion": -0.002,
+        "Repulsion": 0.001,
         "Range": 0.05,
         "ImageName": "Troops",
         "MarchSounds": [
@@ -424,13 +425,13 @@
           "Depper Doders",
           "Hadwi"
         ],
-        "MinSpeed": 0.01,
-        "MaxSpeed": 0.01,
+        "MinSpeed": 0.001,
+        "MaxSpeed": 0.075,
         "Health": 1,
         "MaxHealth": 1,
         "Strength": 1,
         "Repulsion": 0.00005,
-        "Range": 0.05,
+        "Range": 0.002,
         "ImageName": "Riots",
         "KillSounds": [
           "Aaah",
