--- a/ldjam50/Assets/StreamingAssets/GameFieldSettings.json
+++ b/ldjam50/Assets/StreamingAssets/GameFieldSettings.json
@@ -31,7 +31,12 @@
           "Blue": 0,
           "Alpha": 0.95
         },
-		
+		"SelectedColor": {
+          "Red": 1,
+          "Green": 0,
+          "Blue": 0,
+          "Alpha": 0.95
+        },
         "ImageName": "SGuard",
         "MarchSounds": [
           "Fanfare_1",
