Jason Color Selected

--- a/ldjam50/Assets/StreamingAssets/GameFieldSettings.json
+++ b/ldjam50/Assets/StreamingAssets/GameFieldSettings.json
@@ -35,7 +35,7 @@
           "Red": 1,
           "Green": 0,
           "Blue": 0,
-          "Alpha": 0.95
+          "Alpha": 0.45
         },
         "ImageName": "SGuard",
         "MarchSounds": [
@@ -75,6 +75,12 @@
           "Blue": 0.7075472,
           "Alpha": 0.95
         },
+		"SelectedColor": {
+          "Red": 0.251424,
+          "Green": 0.3966849,
+          "Blue": 0.7075472,
+          "Alpha": 0.45
+        },
         "ImageName": "Police",
         "MarchSounds": [
           "Fanfare_1",
@@ -112,6 +118,12 @@
           "Green": 0.5,
           "Blue": 0.5,
           "Alpha": 0.95
+        },
+		"SelectedColor": {
+          "Red": 0.5,
+          "Green": 0.5,
+          "Blue": 0.5,
+          "Alpha": 0.45
         },
         "ImageName": "Tower",
         "MarchSounds": [
@@ -151,6 +163,12 @@
           "Blue": 0,
           "Alpha": 0.95
         },
+		"SelectedColor": {
+          "Red": 0,
+          "Green": 0.5,
+          "Blue": 0,
+          "Alpha": 0.45
+		},
         "ImageName": "Riot_M2",
         "MarchSounds": [
           "Fanfare_1",
@@ -229,6 +247,12 @@
           "Green": 0.3966849,
           "Blue": 0.7075472,
           "Alpha": 0.95
+        },
+		"SelectedColor": {
+          "Red": 0.251424,
+          "Green": 0.3966849,
+          "Blue": 0.7075472,
+          "Alpha": 0.45
         },
         "MaxSpeed": 0.6,
         "Health": 100000000,
@@ -314,6 +338,12 @@
           "Blue": 0.7075472,
           "Alpha": 0.95
         },
+		 "SelectedColor": {
+          "Red": 0.251424,
+          "Green": 0.3966849,
+          "Blue": 0.7075472,
+          "Alpha": 0.45
+        },
         "MaxSpeed": 0.4,
         "Health": 200,
         "MaxHealth": 200,
@@ -351,7 +381,7 @@
         "MaxSpeed": 0.01,
         "Health": 100,
         "MaxHealth": 100,
-        "Strength": 0,
+        "Strength": 1,
         "Repulsion": 0.00005,
         "Range": 0.002,
         "ImageName": "Riots",
@@ -381,8 +411,8 @@
     "MoneyGainPerInterval": 0,
     "PalaceDefault":{
     "Healing": 50,
-    "Health": 100000,
-    "MaxHealth": 100000
+    "Health": 10,
+    "MaxHealth": 10
 	},
     "DisableShop": true,
     "TroopDefaults": [
@@ -396,6 +426,12 @@
           "Green": 0.3966849,
           "Blue": 0.7075472,
           "Alpha": 0.95
+        },
+		"SelectedColor": {
+          "Red": 0.251424,
+          "Green": 0.3966849,
+          "Blue": 0.7075472,
+          "Alpha": 0.45
         },
         "MaxSpeed": 0.6,
         "Health": 1000000,
@@ -436,7 +472,7 @@
         "MaxHealth": 1,
         "Strength": 1,
         "Repulsion": 0.00005,
-        "Range": 0.05,
+        "Range": 0.002,
         "ImageName": "Riots",
         "KillSounds": [
           "Aaah",
@@ -486,6 +522,12 @@
           "Green": 0,
           "Blue": 0,
           "Alpha": 0.95
+        },
+		 "SelectedColor": {
+          "Red": 1,
+          "Green": 0,
+          "Blue": 0,
+          "Alpha": 0.45
         },
         "ImageName": "SGuard",
         "MarchSounds": [
