--- a/ldjam50/Assets/StreamingAssets/GameFieldSettings.json
+++ b/ldjam50/Assets/StreamingAssets/GameFieldSettings.json
@@ -7,11 +7,11 @@
     "MoneyInterval": 3,
     "MoneyFirstTick": 5,
     "MoneyGainPerInterval": 50,
-    "PalaceDefault":{
-    "Healing": 50,
-    "Health": 100000,
-    "MaxHealth": 100000
-	},
+    "PalaceDefault": {
+      "Healing": 50,
+      "Health": 100000,
+      "MaxHealth": 100000
+    },
     "DisableShop": false,
     "TroopDefaults": [
       {
@@ -31,7 +31,7 @@
           "Blue": 0,
           "Alpha": 0.95
         },
-		"SelectedColor": {
+        "SelectedColor": {
           "Red": 1,
           "Green": 0,
           "Blue": 0,
@@ -75,7 +75,7 @@
           "Blue": 0.7075472,
           "Alpha": 0.95
         },
-		"SelectedColor": {
+        "SelectedColor": {
           "Red": 0.251424,
           "Green": 0.3966849,
           "Blue": 0.7075472,
@@ -119,7 +119,7 @@
           "Blue": 0.5,
           "Alpha": 0.95
         },
-		"SelectedColor": {
+        "SelectedColor": {
           "Red": 0.5,
           "Green": 0.5,
           "Blue": 0.5,
@@ -163,12 +163,12 @@
           "Blue": 0,
           "Alpha": 0.95
         },
-		"SelectedColor": {
+        "SelectedColor": {
           "Red": 0,
           "Green": 0.5,
           "Blue": 0,
           "Alpha": 0.45
-		},
+        },
         "ImageName": "Riot_M2",
         "MarchSounds": [
           "Fanfare_1",
@@ -229,11 +229,11 @@
     "MoneyInterval": 1000,
     "MoneyFirstTick": 1000,
     "MoneyGainPerInterval": 0,
-    "PalaceDefault":{
-    "Healing": 50,
-    "Health": 10,
-    "MaxHealth": 10
-	},
+    "PalaceDefault": {
+      "Healing": 50,
+      "Health": 10,
+      "MaxHealth": 10
+    },
     "DisableShop": true,
     "TroopDefaults": [
       {
@@ -248,7 +248,7 @@
           "Blue": 0.7075472,
           "Alpha": 0.95
         },
-		"SelectedColor": {
+        "SelectedColor": {
           "Red": 0.251424,
           "Green": 0.3966849,
           "Blue": 0.7075472,
@@ -320,11 +320,11 @@
     "MoneyInterval": 1000,
     "MoneyFirstTick": 1000,
     "MoneyGainPerInterval": 0,
-    "PalaceDefault":{
-    "Healing": 50,
-    "Health": 100,
-    "MaxHealth": 100
-	},
+    "PalaceDefault": {
+      "Healing": 50,
+      "Health": 100,
+      "MaxHealth": 100
+    },
     "DisableShop": true,
     "TroopDefaults": [
       {
@@ -338,7 +338,7 @@
           "Blue": 0.7075472,
           "Alpha": 0.95
         },
-		 "SelectedColor": {
+        "SelectedColor": {
           "Red": 0.251424,
           "Green": 0.3966849,
           "Blue": 0.7075472,
@@ -409,11 +409,11 @@
     "MoneyInterval": 1000,
     "MoneyFirstTick": 1000,
     "MoneyGainPerInterval": 0,
-    "PalaceDefault":{
-    "Healing": 50,
-    "Health": 10,
-    "MaxHealth": 10
-	},
+    "PalaceDefault": {
+      "Healing": 50,
+      "Health": 10,
+      "MaxHealth": 10
+    },
     "DisableShop": true,
     "TroopDefaults": [
       {
@@ -427,7 +427,7 @@
           "Blue": 0.7075472,
           "Alpha": 0.95
         },
-		"SelectedColor": {
+        "SelectedColor": {
           "Red": 0.251424,
           "Green": 0.3966849,
           "Blue": 0.7075472,
@@ -498,12 +498,12 @@
     "MoneyInterval": 1000,
     "MoneyFirstTick": 1000,
     "MoneyGainPerInterval": 0,
-    "PalaceDefault":{
-    "Healing": 500,
-    "Health": 100,
-    "MaxHealth": 100,
-	"SafeZoneRadius": 0.2
-	},
+    "PalaceDefault": {
+      "Healing": 500,
+      "Health": 100,
+      "MaxHealth": 100,
+      "SafeZoneRadius": 0.2
+    },
     "DisableShop": true,
     "TroopDefaults": [
       {
@@ -523,7 +523,7 @@
           "Blue": 0,
           "Alpha": 0.95
         },
-		 "SelectedColor": {
+        "SelectedColor": {
           "Red": 1,
           "Green": 0,
           "Blue": 0,
@@ -546,7 +546,7 @@
             "Pos_x": 0.495,
             "Pos_y": 0.512,
             "Radius": 0.07
-		  }
+          }
         ]
       }
     ],
@@ -563,8 +563,7 @@
         "Strength": 1,
         "Repulsion": 0.00005,
         "Range": 0.002,
-        "ImageName": "Riots",
-        
+        "ImageName": "Riots"
       }
     ]
   }
