--- a/ldjam50/Assets/StreamingAssets/GameFieldSettings.json
+++ b/ldjam50/Assets/StreamingAssets/GameFieldSettings.json
@@ -3,7 +3,8 @@
     "Name": "Default",
     "FirstTick": 3,
     "TickInterval": 2.8,
-    "TickIntervalFactor": 0.98,
+    "TickIntervalFactor": 0.99,
+	"TickIntervalLogBase": 10,
     "MoneyInterval": 3,
     "MoneyFirstTick": 5,
     "MoneyGainPerInterval": 50,
