Added Start Money, no Spawn if there is start Money

--- a/ldjam50/Assets/StreamingAssets/GameFieldSettings.json
+++ b/ldjam50/Assets/StreamingAssets/GameFieldSettings.json
@@ -8,6 +8,7 @@
     "MoneyInterval": 3,
     "MoneyFirstTick": 5,
     "MoneyGainPerInterval": 50,
+	"MoneyStart": 100,
     "PalaceDefault": {
       "Healing": 50,
       "Health": 100000,
