--- a/ldjam50/Assets/StreamingAssets/GameFieldSettings.json
+++ b/ldjam50/Assets/StreamingAssets/GameFieldSettings.json
@@ -4,17 +4,17 @@
     "FirstTick": 3,
     "TickInterval": 2.8,
     "TickIntervalFactor": 0.99,
-	"TickIntervalLogBase": 10,
+    "TickIntervalLogBase": 10,
     "MoneyInterval": 3,
     "MoneyFirstTick": 5,
     "MoneyGainPerInterval": 50,
-	"MoneyStart": 100,
+    "MoneyStart": 100,
     "PalaceDefault": {
       "Healing": 50,
       "Health": 100000,
       "MaxHealth": 100000
     },
-	"MilitaryBaseDefault": {
+    "MilitaryBaseDefault": {
       "Healing": 50,
       "Health": 100000,
       "MaxHealth": 100000
@@ -32,7 +32,13 @@
         "Strength": 100,
         "Repulsion": 0.001,
         "Range": 0.055,
-        "Color": {
+        "ForegroundColor": {
+          "Red": 1,
+          "Green": 0,
+          "Blue": 0,
+          "Alpha": 0.95
+        },
+        "BackgroundColor": {
           "Red": 1,
           "Green": 0,
           "Blue": 0,
@@ -44,7 +50,10 @@
           "Blue": 0,
           "Alpha": 0.45
         },
-        "ImageNames": [ "SGuard" ],
+        "ImageNames": [
+          "SGuard"
+
+        ],
         "MarchSounds": [
           "Fanfare_1",
           "March_1",
@@ -58,8 +67,10 @@
         "UnitCost": 1000,
         "Bases": [
           {
-            "Pos_x": 0.495,
-            "Pos_y": 0.512,
+            "Position": {
+              "X": 0.495,
+              "Y": 0.512
+            },
             "Radius": 0.07
           }
         ]
@@ -76,7 +87,7 @@
         "Strength": 30,
         "Repulsion": 0.001,
         "Range": 0.055,
-        "Color": {
+        "BackgroundColor": {
           "Red": 0.251424,
           "Green": 0.3966849,
           "Blue": 0.7075472,
@@ -102,8 +113,10 @@
         "UnitCost": 100,
         "Bases": [
           {
-            "Pos_x": 0.495,
-            "Pos_y": 0.512,
+            "Position": {
+              "X": 0.495,
+              "Y": 0.512
+            },
             "Radius": 0.07
           }
         ]
@@ -120,7 +133,7 @@
         "Strength": 0,
         "Repulsion": 0.003,
         "Range": 0.05,
-        "Color": {
+        "BackgroundColor": {
           "Red": 0.5,
           "Green": 0.5,
           "Blue": 0.5,
@@ -133,7 +146,7 @@
           "Alpha": 0.45
         },
         "ImageNames": [
-		  "Barricade"
+          "Barricade"
         ],
         "MarchSounds": [
           "Fanfare_1",
@@ -148,12 +161,14 @@
         "UnitCost": 20,
         "Bases": [
           {
-            "Pos_x": 0.495,
-            "Pos_y": 0.512,
+            "Position": {
+              "X": 0.495,
+              "Y": 0.512
+            },
             "Radius": 0.07
           }
         ],
-	    "MoveJustOnce": true
+        "MoveJustOnce": true
       },
       {
         "Type": "Army",
@@ -167,7 +182,7 @@
         "Strength": 30,
         "Repulsion": 0.001,
         "Range": 0.055,
-        "Color": {
+        "BackgroundColor": {
           "Red": 0,
           "Green": 0.5,
           "Blue": 0,
@@ -195,8 +210,10 @@
         "UnitCost": 200,
         "Bases": [
           {
-            "Pos_x": 0.721,
-            "Pos_y": 0.9175,
+            "Position": {
+              "X": 0.721,
+              "Y": 0.9175
+            },
             "Radius": 0.07
           }
         ]
@@ -256,7 +273,7 @@
           "1st Police Corps",
           "2st Police Corps"
         ],
-        "Color": {
+        "BackgroundColor": {
           "Red": 0.251424,
           "Green": 0.3966849,
           "Blue": 0.7075472,
@@ -291,8 +308,10 @@
         "UnitCost": 100,
         "Bases": [
           {
-            "Pos_x": 0.5,
-            "Pos_y": 0.5,
+            "Position": {
+              "X": 0.5,
+              "Y": 0.5
+            },
             "Radius": 0.07
           }
         ]
@@ -352,7 +371,7 @@
           "1st Police Corps",
           "2st Police Corps"
         ],
-        "Color": {
+        "BackgroundColor": {
           "Red": 0.251424,
           "Green": 0.3966849,
           "Blue": 0.7075472,
@@ -387,8 +406,10 @@
         "UnitCost": 100,
         "Bases": [
           {
-            "Pos_x": 0.5,
-            "Pos_y": 0.5,
+            "Position": {
+              "X": 0.5,
+              "Y": 0.5
+            },
             "Radius": 0.07
           }
         ]
@@ -446,7 +467,7 @@
           "1st Police Corps",
           "2st Police Corps"
         ],
-        "Color": {
+        "BackgroundColor": {
           "Red": 0.251424,
           "Green": 0.3966849,
           "Blue": 0.7075472,
@@ -480,8 +501,10 @@
         "UnitCost": 100,
         "Bases": [
           {
-            "Pos_x": 0.5,
-            "Pos_y": 0.5,
+            "Position": {
+              "X": 0.5,
+              "Y": 0.5
+            },
             "Radius": 0.07
           }
         ]
@@ -546,7 +569,13 @@
         "Strength": 100,
         "Repulsion": 0.001,
         "Range": 0.05,
-        "Color": {
+        "ForegroundColor": {
+          "Red": 1,
+          "Green": 0,
+          "Blue": 0,
+          "Alpha": 0.95
+        },
+        "BackgroundColor": {
           "Red": 1,
           "Green": 0,
           "Blue": 0,
@@ -574,8 +603,10 @@
         "UnitCost": 200,
         "Bases": [
           {
-            "Pos_x": 0.495,
-            "Pos_y": 0.512,
+            "Position": {
+              "X": 0.495,
+              "Y": 0.512
+            },
             "Radius": 0.07
           }
         ]
