--- a/.gitignore
+++ b/.gitignore
@@ -109,3 +109,4 @@ Assembly-UnityScript-firstpass.unityproj
 *.suo
 /LdJam49/Assets/Packages
 /Data/.~lock.LDJam_Physics.xlsx#
+/ldjam50/Assets/StreamingAssets/GameFieldSettings - SafeCopy_Corinne2.json.meta
