Added new Rebel Spawn Sounds

--- a/ldjam50/Assets/StreamingAssets/GameFieldSettings.json
+++ b/ldjam50/Assets/StreamingAssets/GameFieldSettings.json
@@ -243,7 +243,12 @@
           "Whistle_4",
 		  "Rebels_Generic",
 		  "Rebels_Generic_2",
-		  "Rebels_Generic_3"
+		  "Rebels_Generic_3",
+		  "Earth_is__cube",
+		  "Glace_Schmöuzt",
+		  "Its_A_Trap",
+		  "No_More_School",
+		  "We_Want_Cake"
         ]
       }
     ]
