JSON: Rebell->Rebel

--- a/ldjam50/Assets/StreamingAssets/GameFieldSettings.json
+++ b/ldjam50/Assets/StreamingAssets/GameFieldSettings.json
@@ -464,7 +464,7 @@
     ]
   },
   {
-    "Name": "Rebell Collect",
+    "Name": "Rebel Collect",
     "FirstTick": 3,
     "TickInterval": 5,
     "TickIntervalFactor": 0.97,
